crates/loq_cli/tests/snapshots/snapshots__all_ok.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 76
expression: stdout
---
✔ 2 files ok (TIME)
