crates/loq_cli/tests/snapshots/snapshots__baselined_file_passes.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 121
expression: stdout
---
✔ 1 files ok (TIME)
