crates/loq_cli/tests/snapshots/snapshots__binary_file_skipped.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 148
expression: stdout
---
✔ 1 files ok (TIME)
