crates/loq_cli/tests/snapshots/snapshots__empty_directory.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 67
expression: stdout
---
✔ 0 files ok (TIME)
