crates/loq_cli/tests/snapshots/snapshots__gitignore_respected.snap
---
source: crates/loq_cli/tests/snapshots.rs
assertion_line: 139
expression: stdout
---
✔ 2 files ok (TIME)
