crates/loq_cli/tests/snapshots/snapshots__json_output_multiple_rules.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "skip_warnings": [],
  "summary": {
    "files_checked": 3,
    "passed": 2,
    "skipped": 0,
    "violations": 1,
    "walk_errors": 0
  },
  "version": "[version]",
  "violations": [
    {
      "approximate": false,
      "lines": 15,
      "max_lines": 10,
      "metric": "lines",
      "path": "toolong.rs",
      "rule": "*.rs"
    }
  ],
  "walk_errors": []
}
