crates/loq_cli/tests/snapshots/snapshots__json_output_one_violation.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "skip_warnings": [],
  "summary": {
    "files_checked": 1,
    "passed": 0,
    "skipped": 0,
    "violations": 1,
    "walk_errors": 0
  },
  "version": "[version]",
  "violations": [
    {
      "lines": 20,
      "max_lines": 10,
      "path": "toolong.rs",
      "rule": "default"
    }
  ],
  "walk_errors": []
}
