crates/loq_cli/tests/snapshots/snapshots__json_output_pass_and_fail.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "skip_warnings": [],
  "summary": {
    "files_checked": 2,
    "passed": 1,
    "skipped": 0,
    "violations": 1,
    "walk_errors": 0
  },
  "version": "[version]",
  "violations": [
    {
      "approximate": false,
      "lines": 15,
      "max_lines": 10,
      "metric": "lines",
      "path": "error.rs",
      "rule": "default"
    }
  ],
  "walk_errors": []
}
