crates/loq_cli/tests/snapshots/snapshots__json_output_token_budget.snap
---
source: crates/loq_cli/tests/snapshots.rs
expression: json
---
{
  "skip_warnings": [],
  "summary": {
    "files_checked": 2,
    "passed": 0,
    "skipped": 0,
    "violations": 2,
    "walk_errors": 0
  },
  "version": "[version]",
  "violations": [
    {
      "approximate": false,
      "lines": 3,
      "max_lines": 2,
      "metric": "lines",
      "path": "code.rs",
      "rule": "code.rs"
    },
    {
      "approximate": true,
      "max_tokens": 4,
      "metric": "tokens",
      "path": "prompt.md",
      "rule": "prompt.md",
      "tokens": 5
    }
  ],
  "walk_errors": []
}
